k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maven-project
  namespace: demo
  labels:
    app: maven-project
spec:
  type: ClusterIP
  selector:
    app: maven-project
  ports:
    - name: http
      port: 80
      targetPort: 8080
